--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/native-stack": "^6.9.13",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-pager-view": "^6.2.1",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
@@ -26,7 +28,8 @@
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.2.23",
+    "@types/react-dom": "^18.2.8",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
