--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -30,6 +30,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
+    "@types/react-native-vector-icons": "^6.4.17",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
