--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-maps": "^1.8.0",
     "react-native-pager-view": "^6.2.1",
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "^4.7.2",
