--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-get-location": "^4.0.0",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-maps": "^1.8.0",
     "react-native-pager-view": "^6.2.1",
