--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-fast-image": "^8.6.3",
     "react-native-get-location": "^4.0.0",
     "react-native-image-pan-zoom": "^2.1.12",
     "react-native-maps": "^1.8.0",
