--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-get-location": "^4.0.0",
     "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.8.0",
     "react-native-pager-view": "^6.2.1",
     "react-native-paper": "^5.10.6",
