--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-date-picker": "^5.0.0",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-fast-image": "^8.6.3",
     "react-native-get-location": "^4.0.0",
     "react-native-image-pan-zoom": "^2.1.12",
