--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/storage": "^19.2.2",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "date-fns": "^3.6.0",
     "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
