--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-native-firebase/auth": "^18.6.1",
     "@react-native-firebase/database": "^18.6.1",
     "@react-native-firebase/firestore": "^18.6.1",
-    "@react-native-firebase/storage": "^19.2.2",
+    "@react-native-firebase/storage": "18.6.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "date-fns": "^3.6.0",
