--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-vector-icons": "^10.0.2",
+    "sentiment": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
